# albion-dungeon-scanner

./: README.md  build_database.py  config.ini  database.json  dummy_entity_data.json  dummy_localization_en.json  dummy_localization_id.json  dummy_mob_data.json  gui.py  gui_dearpygui.py  gui_flet.py  lootchests.json  parsed_photon_log_20250529_204910_0.json  parsed_photon_log_20250529_215254_0.json  parsed_photon_log_20250529_221009_0.json  pyproject.toml  simulated_albion_localization_EN.json  simulated_albion_localization_ID.json  test_scapy.py  unknown_ids.txt
network_scanner/: sniffer.py
scanner/: __init__.py
scanner/utils/: binary.py  config.py  logging.py  singleton.py
