[project]
name = "albion_dungeon_scanner"
version = "0.1.0"
description = "A dungeon scanner for Albion Online."
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "pycryptodome>=3.20.0",
    "rich>=13.7.1",
    "customtkinter>=5.2.2",  # <-- Tambahkan ini
    "requests>=2.32.3",
    "pillow>=11.2.1",
    "dearpygui>=2.0.0",
    "flet>=0.28.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
scan = {cmd = "python -c 'from scanner import main; main()'"}
build_database = "python build_database.py"
gui = {cmd = "python gui.py"}  # <-- Tambahkan ini
scan_dpg = "python gui_dearpygui.py"
scan_flet = "python gui_flet.py" 

[tool.pdm]
distribution = false